--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -71,7 +71,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <label>Assignee</label>
-                                        <app-user-list-component></app-user-list-component>
+                                        <app-user-list-component comingChangeReguest = "" userId = {{selectedUserID}} ></app-user-list-component>
                                     </div>
                                     <div class="col-md-6">
 
@@ -93,8 +93,11 @@
                         <div class="kt-portlet__head">
                         </div>
                         <div class="form-group margin-top-5">
-                            <button class="btn btn-brand" type="submit">
+                            <button *ngIf="editAccountCheck == false" class="btn btn-brand" type="submit">
                                 Create
+                            </button>
+                            <button *ngIf="editAccountCheck == true" class="btn btn-brand" type="submit">
+                                Update
                             </button>
                         </div>
                     </form>
@@ -102,4 +105,3 @@
             </div>
         </div>
     </div>
-
