--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -70,7 +70,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Assignee</label>
-                                        <app-user-list-component></app-user-list-component>
+                                        <app-user-list-component comingChangeReguest = "" userId = {{0}} ></app-user-list-component>
                                     </div>
                                 </div>
                             </div>
