--- a/angular/src/app/main/checklist/duplicate-task/duplicate-task.component.html
+++ b/angular/src/app/main/checklist/duplicate-task/duplicate-task.component.html
@@ -79,7 +79,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Assignee</label>
-                                        <app-user-list-component></app-user-list-component>
+                                        <app-user-list-component userId = {{taskDetails.assigneeId}} ></app-user-list-component>
                                     </div>
                                 </div>
                             </div>
