Some fixes in closingchecklist

--- a/angular/src/app/main/checklist/checklist.component.css
+++ b/angular/src/app/main/checklist/checklist.component.css
@@ -173,7 +173,8 @@ button.btn-square{
             flex-direction: row-reverse;
     width: -webkit-fit-content;
     width: -moz-fit-content;
-    width: fit-content
+    width: fit-content;
+    min-width:215px;
 }
 .user-image-box {
     width: 35px;
