--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -129,11 +129,9 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <a class="action-btn"><i class="fas fa-edit" (click)="RedirectToEditTaskPage()"
-                                        style="color: #5867dd;"></i></a>
-                                    <a class="action-btn" href="javascript:;" (click)="deleteTask()">
-                                        <i class="fa fa-trash" style="color: #5867dd;"></i></a>
-                                    <a class="action-btn" (click)="duplicateTask()" ><i class="fa fa-clone" aria-hidden="true"></i></a>
+                                    <a class="action-btn"><img src="../../../../assets/img/edit.svg"  (click)="RedirectToEditTaskPage()"></a>
+                                    <a class="action-btn" (click)="deleteTask()"><img src="../../../../assets/img/del.svg"></a>
+                                    <a class="action-btn" (click)="duplicateTask()" ><img src="../../../../assets/img/dup.svg"></a>
 
                                 </div>
                             </div>
