--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -89,7 +89,7 @@
 
 
                                             <div *ngFor="let item of assigniNameForHeader "
-                                                (click)="GetUserTasks(i.assigneeId)" class="kt-user-card-v2">
+                                                (click)="GetAssigniSpecficAccounts(i.assigneeId)" class="kt-user-card-v2">
                                                 <div class="kt-user-card-v2__pic user-image-box">
                                                     <div *ngIf="item.profilePicture" class="kt-badge kt-badge--xl">
                                                         <img class="header-profile-picture m--img-rounded m--marginless m--img-centered"
@@ -203,10 +203,7 @@
                                                 </div>
                                             </div>
                                             <div *ngIf="item.id == rowid">
-                                                <p-autoComplete placeholder="Search..." [(ngModel)]="item.text"
-                                                    [suggestions]="userName" (completeMethod)="onSearchUsers($event)"
-                                                    (keyup.enter)="addInput(item)" [forceSelection]="true" required>
-                                                </p-autoComplete>
+                                                <app-user-list-component  (callBack)="refreshGrid()"  taskId = {{item.id}} comingChangeReguest="accounts" userId = {{item.assigneeId}} ></app-user-list-component>
                                             </div>
                                         </td>
                                         <td class="action-cell">
@@ -240,9 +237,9 @@
                                                         <span class="">{{item.reconciliationType}}</span>
                                                     </div>
                                                 </li>
-                                                <li class="assignee-cell kt-user-card-v2">
+                                                <li  class="assignee-cell kt-user-card-v2">
                                                     <div class="thead-box"><b>Assignee : </b></div>
-                                                    <div class="tdata-box">
+                                                    <div  *ngIf="item.id != rowid" (click)="openFieldUpdateAssignee(item.id)" class="tdata-box">
                                                         <div class="kt-user-card-v2__pic">
                                                             <div *ngIf="item.profilePicture"
                                                                 class="kt-badge kt-badge--xl">
@@ -257,12 +254,7 @@
                                                         </div>
                                                     </div>
                                                     <div *ngIf="item.id == rowid">
-                                                        <p-autoComplete placeholder="Search..." [(ngModel)]="item.text"
-                                                            [suggestions]="userName"
-                                                            (completeMethod)="onSearchUsers($event)"
-                                                            (keyup.enter)="addInput(item)" [forceSelection]="true"
-                                                            required>
-                                                        </p-autoComplete>
+                                                        <app-user-list-component  (callBack)="refreshGrid()"  taskId = {{item.id}} comingChangeReguest="accounts" userId = {{item.assigneeId}} ></app-user-list-component>
                                                     </div>
                                                 </li>
                                                 <li class="action-cell-item">
