--- a/angular/src/app/main/account/accountsubtype/accountsubtype.component.html
+++ b/angular/src/app/main/account/accountsubtype/accountsubtype.component.html
@@ -117,10 +117,10 @@
 
                                                 <a *ngIf="'Pages.Categories.Edit' | permission" class="btn"
                                                     href="javascript:;" (click)="editCategory(record.id)">
-                                                    <i class="fas fa-edit" style="color: #5867dd;"></i></a>
+                                                    <img src="../../../../assets/img/edit.svg.svg"></a>
                                                 <a *ngIf="'Pages.Categories.Delete' | permission" class="btn"
                                                     href="javascript:;" (click)="deleteCategory(record.id)">
-                                                    <i class="fa fa-trash" style="color: #5867dd;"></i></a>
+                                                    <img src="../../../../assets/img/del.svg"></a>
 
 
                                             </div>
